[package]
name = "webpage"
description = "Small library to fetch info about a web page: title, description, language, HTTP info, RSS feeds, Opengraph, Schema.org, and more"
readme = "README.md"
keywords = ["webpage", "html", "opengraph"]
license = "MIT"
version = "1.5.0"
authors = ["Otto <otto@ot-to.nl>"]
repository = "https://github.com/orottier/webpage-rs"
edition = "2018"

[features]
default = ["curl"]

[dependencies]
curl = { version = "0.4.41", optional = true }
html5ever = "0.25.1"
markup5ever_rcdom = "0.1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = "1.0"
